--- a/client/src/components/Applications/AppLayout/AppLayout.scss
+++ b/client/src/components/Applications/AppLayout/AppLayout.scss
@@ -15,7 +15,7 @@
 
 .apps-placeholder {
     display: flex;
-    height: 100%; /* Be consistent with `#appDetailwrapper`/`#appDetail-wrapper` (which can exist at the same location),
+    height: 100%; /* Be consistent with `#appDetail-wrapper`/`.appDetail-error` (which can exist at the same location),
                      so that `appBrowser-wrapper` height does not change based on sibling content */
     justify-content: center;
     align-items: center;
