FP-389: Color background of app tray

--- a/client/src/components/Applications/AppBrowser/AppBrowser.scss
+++ b/client/src/components/Applications/AppBrowser/AppBrowser.scss
@@ -56,6 +56,7 @@ ul#appBrowser-sidebar {
 #appBrowser-tray {
   flex-grow: 1;
 
+  background-color: #f4f4f4;
   border-left: 1px solid rgba(112, 112, 112, .25);
 }
 
