--- a/client/src/components/ManageAccount/ManageAccount.scss
+++ b/client/src/components/ManageAccount/ManageAccount.scss
@@ -1,48 +1,48 @@
-// Wrapper for entire Route
+/* 
+  Wrappers 
+*/
 .manage-account-wrapper {
   display: flex;
-  flex-direction: row;
   width: 100%;
   height: 100%;
   a {
     color: #9d85ef;
   }
+  .container-fluid {
+    padding: 20px 40px 0 25px !important;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
 }
-// Page Wrapper
 .manage-account-content {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   max-height: 100%;
-  padding: 1.25rem 2.5rem 0 1.5rem;
 }
+.user-profile {
+  flex-grow: 1;
+  @media (min-width: 992px) {
+    /* Hide Border when tables stack on one another */
+    .user-profile-main {
+      border-right: 1px solid rgba(112, 112, 112, .25);
+    } 
+  }
+}
+/* 
+  Components 
+*/
 .manage-account-header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  height: 2rem;
+  justify-content: space-between;
+  margin: 0;
+  min-height: 2rem;
   border-bottom: 1px solid #707070;
   h5 {
     font-weight: 400;
     color: #484848;
-  }
-}
-// Content Wrapper
-.user-profile {
-  display: flex;
-  flex-flow: row wrap;
-  height: calc(100% - 2rem);
-  .user-profile-main {
-    width: 70%;
-    border-right: 1px solid rgba(112, 112, 112, .25);
-    padding: 1rem 1rem 0 0;
-    div:not(:first-child) {
-      margin-top: 2rem;
-    }
-  }
-  .user-profile-side {
-    width: 30%;
-    padding: 1rem 0 0 1rem;
   }
 }
 .manage-account-modal {
@@ -60,9 +60,7 @@
       margin: 0;
   }
 }
-/*
-  Component Selectors
-*/
+// Tables
 .manage-account-table {
   width: 100%;
   color: #707070;
@@ -80,7 +78,6 @@
   }
   td, th {
     display: flex; 
-    flex-direction: row;
     align-items: center;
     height: 2rem;
     padding-left: 1rem;
@@ -88,9 +85,8 @@
     white-space: nowrap;
   }
 }
-
-.profile-component-wrapper-side {
-  margin-bottom: 1.5rem;
+.profile-component-wrapper {
+  margin-top: 1.25rem;
 }
 .profile-component-header {
   display: flex;
@@ -106,6 +102,7 @@
   font-size: 14px;
   margin-bottom: 1rem;
 }
+// Buttons and Forms
 .manage-account-submit-button {
   border-radius: 0;
   border: 0;
