--- a/client/src/components/History/History.scss
+++ b/client/src/components/History/History.scss
@@ -1,34 +1,103 @@
-.history-container {
+
+
+.history-wrapper {
+  /* As a flex item */
+  flex-grow: 1;
+  flex-shrink: 0; /* Prevent Safari from shrinking this element (FP-389) */
+
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  padding: 20px 40px 0 20px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #707070;
 }
 
 .history-sidebar {
-  /* this is a copy of allocations-sidebar from Allocations.scss  @TODO refactor so using a single definition*/
+  /* this is an attempt to follow AppBrowser.scss while checking Allocations.scss
+  @TODO refactor so using a single definition*/
+  /* FP-404: All Portal section sidebars should use this value. */
+  --min-width: 200px;
+
+  margin-left: -20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
   border-right: 1px solid rgba(112, 112, 112, .25);
-  font-family: Roboto;
-  .nav-link {
-    padding: 8px 0 8px 30px;
-    display: flex;
-    align-items: center;
-    width: 215px;
-  }
-  a {
-    color: #707070;
-    padding-left: 1.5em;
-    height: 2.5em;
-    .link-icon {
-      font-size: 1.2em;
-      width: 1em;
-    }
-    .link-text {
-      font-size: 0.78em;
-      font-weight: 500;
-      padding-left: 16px;
-      vertical-align: middle;
-    }
-  }
-  .active {
-    background: rgba(#9d85ef, 0.25);
-  }
+}
+
+.history-sidebar .nav-item {
+  /* Define minimum width of list and minimum width of columns in list */
+  /* NOTE: Wes B. does not know how to do this using CSS Grid. Help is welcome. */
+  min-width: var(--min-width);
+}
+
+.history-sidebar .nav-link {
+  padding: 5px 25px 5px 20px; /* overwrite Bootstrap, match UI design */
+
+  color: #707070;
+  border-radius: 0;
+  cursor: pointer; /* RFE: Add `href` on links to both avoid needing this style and provide URL to app state */
+  border: none;
+
+  white-space: nowrap;
+}
+
+.history-sidebar .nav-link.active {
+  background: #dfdaf5;
+  border: none;
+}
+
+.history-sidebar .nav-link.hover {
+  background: #d9d1ff;
+  border: none;
+}
+
+.history-sidebar .nav-link:hover {
+  background: #d9d1ff;
+  border: none;
+}
+
+.history-sidebar .nav-content {
+  padding-left: 10px;
+}
+
+.history-sidebar .nav-text {
+  padding-left: 15px;
+  font-size: .78em;
+  font-weight: 500;
+}
+
+.history-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  border-bottom: 1px solid #707070;
+}
+
+.history-header__text {
+  font-size: 1.25rem;
+  color: #484848;
+  font-weight: 400;
+  vertical-align: text-bottom;
+  display: flex;
+  align-items: flex-end;
+}
+
+.history-header__button {
+  font-size: .78em;
+}
+
+.history-container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.history-content {
+  padding: 0 0 0 1em;
+  width: 100%;
+  height: 100%;
+  font-size: .78em;
 }
