--- a/client/src/components/Tickets/TicketModal.scss
+++ b/client/src/components/Tickets/TicketModal.scss
@@ -103,7 +103,13 @@
   /* ticket header specific styles */
   .ticket-id {
     color: #707070;
-    padding-right: 5px;
+  }
+  /* Visual separation for subject preceded by ID */
+  .ticket-id + .ticket-subject::before {
+    content: '|';
+    display: inline-block;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
   }
 
   /* make bootstrap dialog wider */
