--- a/client/src/components/Applications/AppForm/AppForm.scss
+++ b/client/src/components/Applications/AppForm/AppForm.scss
@@ -37,7 +37,8 @@
     align-items: center;
 }
 
-.appForm-textInput label, .appForm-select label {
+.appForm-textInput label,
+.appForm-select label {
     font-weight: bold;
 }
 
