--- a/client/src/components/Tickets/TicketModal.scss
+++ b/client/src/components/Tickets/TicketModal.scss
@@ -1,4 +1,5 @@
-.ticket-detailed-view-container, .ticket-detailed-view-container .row{
+.ticket-detailed-view-container,
+.ticket-detailed-view-container .row{
   height: 100%;
 }
 
@@ -29,7 +30,8 @@
   min-height: 5em;
 }
 
-.ticket-reply-button, toggle-icon {
+.ticket-reply-button,
+toggle-icon {
   text-align: right;
 }
 
