--- a/client/src/components/History/History.scss
+++ b/client/src/components/History/History.scss
@@ -1,3 +1,4 @@
+/* this is an attempt to follow AppBrowser.scss including FP-389 while checking Allocations.scss*/
 
 
 .history-wrapper {
@@ -7,14 +8,13 @@
 
   display: flex;
   flex-direction: column;
-  padding: 20px 40px 0 20px;
-  padding-bottom: 5px;
+
+  padding: 20px 40px 0px 20px;
   border-bottom: 1px solid #707070;
 }
 
 .history-sidebar {
-  /* this is an attempt to follow AppBrowser.scss while checking Allocations.scss
-  @TODO refactor so using a single definition*/
+@TODO refactor so using a single definition*/
   /* FP-404: All Portal section sidebars should use this value. */
   --min-width: 200px;
 
@@ -59,12 +59,22 @@
 
 .history-sidebar .nav-content {
   padding-left: 10px;
+
+  display: flex;
+  align-items: center;
 }
 
 .history-sidebar .nav-text {
   padding-left: 15px;
   font-size: .78em;
   font-weight: 500;
+}
+
+
+/* Copy from Sidebar.scss */
+.history-sidebar__icon-nav {
+  font-size: 1.5em;
+  height: 1em;
 }
 
 .history-header {
@@ -96,7 +106,8 @@
 }
 
 .history-content {
-  padding: 0 0 0 1em;
+  padding-top: 10px;
+  padding-left: 1em;
   width: 100%;
   height: 100%;
   font-size: .78em;
