--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -27,14 +27,15 @@
   font-weight: 500;
 }
 
+/* WARNING: Only used by external components */
 .nav-content .side-nav-icon {
   width: 1em;
-  font-size: 1.2em;
+  font-size: 20px; /* 16px design * 1.2 design-to-app ratio (rounded) */
   vertical-align: middle;
 }
 
 .icon-nav {
-  font-size: 1.5em;
+  font-size: 20px; /* 16px design * 1.2 design-to-app ratio (rounded) */
   display: flex;
   height: 1em;
 }
