--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -17,25 +17,28 @@
 
 #sidebar .nav-content {
   padding-left: 20px;
-  display: flex;
-  align-items: center;
 }
 
 #sidebar .nav-text {
   padding-left: 20px;
-  font-size: .78em;
+  font-size: 0.75em; /* ~20px (16px design * 1.2 design-to-app ratio) */
   font-weight: 500;
 }
 
+/* WARNING: Also used by external components */
+.nav-content {
+  display: flex;
+  align-items: center;
+}
 /* WARNING: Only used by external components */
 .nav-content .side-nav-icon {
   width: 1em;
-  font-size: 20px; /* 16px design * 1.2 design-to-app ratio (rounded) */
+  font-size: 1.2em; /* ~20px (16px design * 1.2 design-to-app ratio) */
   vertical-align: middle;
 }
 
 .icon-nav {
-  font-size: 20px; /* 16px design * 1.2 design-to-app ratio (rounded) */
+  font-size: 1.2em; /* 16px design * 1.2 design-to-app ratio (rounded) */
   display: flex;
   height: 1em;
 }
