--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -1,4 +1,4 @@
-#sidebar {
+.root {
     min-width: 215px;
     max-width: 215px;
     width: 215px;
@@ -7,34 +7,22 @@
     padding-top: 20px;
 }
 
-#sidebar .nav-link {
+.link,
+.link:hover {
   color: #707070;
 }
-
-#sidebar .nav-link.active {
-  background: #dfdaf5;
+.link--active {
+  background-color: #dfdaf5;
 }
 
-#sidebar .nav-content {
+.content {
   padding-left: 20px;
   display: flex;
   align-items: center;
 }
 
-#sidebar .nav-text {
+.text {
   padding-left: 20px;
   font-size: .78em;
   font-weight: 500;
-}
-
-.nav-content .side-nav-icon {
-  width: 1em;
-  font-size: 1.2em;
-  vertical-align: middle;
-}
-
-.icon-nav {
-  font-size: 1.5em;
-  display: flex;
-  height: 1em;
 }
