--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -1,7 +1,9 @@
+$width: 215px;
+
 .root {
-    min-width: 215px;
-    max-width: 215px;
-    width: 215px;
+    min-width: $width;
+    max-width: $width;
+    width: $width;
     background: #f4f4f4;
     border-right: 1px solid rgba(112, 112, 112, .25);
     padding-top: 20px;
