FP-387: Quick: Commit missing style fix

--- a/client/src/components/_common/PaginationTable/PaginationTable.scss
+++ b/client/src/components/_common/PaginationTable/PaginationTable.scss
@@ -79,7 +79,7 @@ Styleguide Objects.FixedHeaderTable
 }
 
 .o-fixed-header-table thead tr {
-  display: block;
+  display: flex;
 }
 .o-fixed-header-table tbody {
   display: block;
