--- a/client/src/components/_common/PaginationTable/PaginationTable.scss
+++ b/client/src/components/_common/PaginationTable/PaginationTable.scss
@@ -80,6 +80,7 @@ Styleguide Objects.FixedHeaderTable
 
 .o-fixed-header-table thead tr {
   display: flex;
+  flex-direction: row;
 }
 .o-fixed-header-table tbody {
   display: block;
