FP-387: Use `@extend` (pending `composes`

--- a/client/src/components/_common/PaginationTable/PaginationTable.scss
+++ b/client/src/components/_common/PaginationTable/PaginationTable.scss
@@ -1,5 +1,7 @@
 .PaginationTable {
   --fixed-header-table--body-height: 30vh; /* calculated by guess & check */
+  /* TODO: After, FP-103, use `composes:` not `@extend` */
+  @extend .o-fixed-header-table;
 
   position: relative;
   align-items: stretch;
@@ -40,7 +42,6 @@
 
 
 
-/* TODO: After, FP-103, use `composes:` to apply `o-fixed-header-table` */
 /*
 Fixed Header Table
 
