--- a/client/src/components/Applications/AppBrowser/AppBrowser.scss
+++ b/client/src/components/Applications/AppBrowser/AppBrowser.scss
@@ -10,7 +10,7 @@
     width: 230px;
     max-width: 230px;
     min-width: 230px;
-    border-right: 1px solid rgba(112, 112, 112, .25);
+    border-right: 1px solid rgba(112, 112, 112, 0.25);
     margin-left: -20px;
     border-bottom: none;
     padding-right: 0;
