--- a/client/src/components/DataFiles/DataFilesListing/DataFilesListingCells.scss
+++ b/client/src/components/DataFiles/DataFilesListing/DataFilesListingCells.scss
@@ -23,8 +23,10 @@
   height: 70px;
   width: 100%;
   content: "";
-  background: linear-gradient( to top,
-    rgba(255, 255, 255, 0.7) 20%, rgba(255, 255, 255, 0) 95%
+  background: linear-gradient(
+    to top,
+    rgba(255, 255, 255, 0.7) 20%,
+    rgba(255, 255, 255, 0) 95%
   );
   pointer-events: none;
 }
