--- a/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesModals.scss
@@ -13,7 +13,7 @@
         padding: 1.3rem;
     }
     .breadcrumbs {
-      padding: 0px 0 10px 0;
+      padding: 0 10px 0;
       color: #707070;
     }
     .filesListing {
