--- a/client/src/components/DataFiles/DataFilesTable/DataFilesTable.scss
+++ b/client/src/components/DataFiles/DataFilesTable/DataFilesTable.scss
@@ -1,5 +1,4 @@
 .custom-scroll {
-
   height: 50%;
 }
 
@@ -17,7 +16,7 @@
 }
 .tr-header {
   border-bottom: 1px solid #000000;
-  padding-bottom: 0px;
+  padding-bottom: 0;
   font-weight: bold;
 }
 
