--- a/client/src/components/Tickets/TicketModal.scss
+++ b/client/src/components/Tickets/TicketModal.scss
@@ -55,7 +55,7 @@ toggle-icon {
   }
 
   .ticket-responder {
-    color: #9d85ef
+    color: #9d85ef;
   }
 
   .ticket-history-loading-icon {
@@ -96,10 +96,10 @@ toggle-icon {
 
   /* Ensure that modal title takes up space but allows room for close button */
   .modal-title {
-    width: 90%
+    width: 90%;
   }
   .modal-header-title {
-    width: 100%
+    width: 100%;
   }
 
   /* ticket header specific styles */
