--- a/client/src/components/DataFiles/DataFiles.scss
+++ b/client/src/components/DataFiles/DataFiles.scss
@@ -19,7 +19,7 @@
 
 .data-files-header {
   border-bottom: 1px solid black;
-  margin-top: 0px;
+  margin-top: 0;
   margin-left: -20px !important;
   padding-bottom: 10px;
 
