--- a/client/src/components/DataFiles/DataFilesToolbar/DataFilesToolbar.scss
+++ b/client/src/components/DataFiles/DataFilesToolbar/DataFilesToolbar.scss
@@ -18,7 +18,7 @@
     color: #484848;
     border-color: #484848;
     border-radius: 0;
-  }
+}
 
 .data-files-toolbar-button + .data-files-toolbar-button {
     margin-left: 5px;
@@ -26,7 +26,7 @@
 
 .toolbar-button-text {
   padding-left: 5px;
-  font: Bold 15px/25px Roboto;
+  font: bold 15px/25px Roboto, sans-serif;
   display: flex;
 }
 
