--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -3,7 +3,7 @@
     max-width: 215px;
     width: 215px;
     background: #f4f4f4;
-    border-right: 1px solid rgba(112, 112, 112, .25);
+    border-right: 1px solid rgba(112, 112, 112, 0.25);
     padding-top: 20px;
 }
 
