--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -18,8 +18,7 @@ body {
 */
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 /*
