--- a/client/src/components/Applications/AppBrowser/AppBrowser.scss
+++ b/client/src/components/Applications/AppBrowser/AppBrowser.scss
@@ -56,7 +56,7 @@
 #appBrowser-sidebar .nav-text,
 #appBrowser-tray .nav-text {
   padding-left: 15px;
-  font-size: .78em;
+  font-size: 0.78em; /* WARNING: This line of code is changed in PR #26; it's value (of 0.75) is desirable */
   font-weight: 500;
 }
 
