FP-276: FInal tweaks before review

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -81,6 +81,7 @@ body > .content {
   flex-grow: 1;
 }
 
+/* WARNING: This block of code moves in PR #26—it should move, and retain these fixes */
 /*
   Custom Font Family
   ===
@@ -88,7 +89,6 @@ body > .content {
 */
 @font-face {
   font-family: 'core-portal'; /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
-                              /* WARNING: This block of code moves in PR #26 */
   src: url('./fonts/core-portal-V2.1.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
@@ -101,7 +101,6 @@ body > .content {
 [class*=" icon-"] */ {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'core-portal' !important; /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
-                                         /* WARNING: This block of code moves in PR #26 */
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
