--- a/client/src/components/Allocations/Allocations.scss
+++ b/client/src/components/Allocations/Allocations.scss
@@ -203,3 +203,9 @@
         background-color: #dfdaf5;
     }
 }
+
+/* HACK: The loading icon should not need height set, but it fixes Safari here */
+/* FP-426: Do not use `height: 100%` or isolate usage pending solution to bigger problem */
+#allocations-wrapper .loading-icon {
+    height: auto;
+}
