--- a/client/src/components/Tickets/TicketModal.scss
+++ b/client/src/components/Tickets/TicketModal.scss
@@ -56,6 +56,7 @@
     color: #9d85ef
   }
 
+  /* FP-426: Avoid all these styles by using `LoadingSpinner` */
   .ticket-history-loading-icon {
     display: flex;
     height: 100%;
