--- a/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
+++ b/client/src/components/_common/InfiniteScrollTable/InfiniteScrollTable.scss
@@ -41,7 +41,7 @@
       display:block; 
       box-sizing:border-box;
       td {
-        width: 100%;
+        width: 100% !important /* override allowed `td:nth-child(N)` width */;
         padding-top: 0.5em;
         padding-bottom: 0.5em;
         text-align: justify;
