--- a/client/src/components/Tickets/TicketCreateForm.scss
+++ b/client/src/components/Tickets/TicketCreateForm.scss
@@ -3,21 +3,20 @@
   display: flex;
   flex-direction: column;
   font-size: 0.75rem;
+
+  /* Override Bootstrap `.form-text` (being used in _common/Form/FormField.js), because we need the field text to be the
+   same size as the field label */
   .form-text {
     font-size: 0.75rem;
-    font-style: italic;
+  }
+
+  /* alter bootstrap size to match font-size for rest of ticket forms */
+  .col-form-label-sm {
+    font-size: 0.75rem;
   }
 }
 
-.ticket-description-group{
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-}
-
 .ticket-description-text-area {
-  resize: none;
-  flex-grow: 1;
   min-height: 5em;
 }
 
@@ -42,16 +41,4 @@
 
 .ticket-link {
   color: #9d85ef;
-}
-
-.form-validation-error {
-  color: #eb6e6e;
-}
-
-.ticket-create-form-label {
-  display: flex;
-  align-items: center;
-  .required-badge {
-    margin-left: 10px;
-  }
 }
