--- a/client/src/components/Jobs/Jobs.scss
+++ b/client/src/components/Jobs/Jobs.scss
@@ -1,4 +1,4 @@
-.jobs-view.PaginationTable {
+.jobs-view.InfiniteScrollTable {
   th:nth-child(1),
   td:nth-child(1) { width: 20%; }
   th:nth-child(2),
