--- a/client/src/components/ManageAccount/ManageAccount.scss
+++ b/client/src/components/ManageAccount/ManageAccount.scss
@@ -28,6 +28,9 @@
       border-right: 1px solid rgba(112, 112, 112, .25);
     } 
   }
+  .btn-link {
+    color: #9d85ef;
+  }
 }
 /* 
   Components 
