FP-387: UI Fix: Truncate: Improve a comment

--- a/client/src/styles/trumps/_u-ellipsis.scss
+++ b/client/src/styles/trumps/_u-ellipsis.scss
@@ -1,5 +1,5 @@
 .u-ellipsis {
-  /* display: block; *//* Set your value in consumer styelsheet */
+  /* display: block; *//* Set relevant value in consumer styelsheet */
 
   white-space: nowrap;
   overflow: hidden;
