--- a/client/src/components/Applications/AppLayout/AppLayout.scss
+++ b/client/src/components/Applications/AppLayout/AppLayout.scss
@@ -1,8 +1,8 @@
 #apps-wrapper {
-    padding: 20px 40px 30px 20px;
     display: flex;
     flex-direction: column;
-    height: 100%;
+
+    padding: 20px 40px 0 20px;
 }
 
 .apps-header {
@@ -15,7 +15,8 @@
 
 .apps-placeholder {
     display: flex;
-    height: 100%;
+    height: 100%; /* Be consistent with `#appDetail-wrapper`/`.appDetail-error` (which can exist at the same location),
+                     so that `appBrowser-wrapper` height does not change based on sibling content */
     justify-content: center;
     align-items: center;
     font-size: 1.4rem;
